fixed issue with the cards getting too big on mobile
this issue was caused by the last commit I did, but it is fixed now

--- a/css/main.css
+++ b/css/main.css
@@ -420,4 +420,11 @@ p {
     height: 100%;
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .testimonial-container .testimonial-card {
+    height: unset;
+    min-height: unset;
+  }
+}
 /*# sourceMappingURL=main.css.map */
